--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   go_router: ^14.2.0
   hooks_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
   uuid: ^4.4.0
 
 dev_dependencies:
